# pangram-encryption

./: Cargo.toml  README.md  flake.nix
src/: main.rs
ui/: appwindow.slint
