[package]
name = "pangram-encryption"
version = "0.1.0"
authors = ["FireFragment <55660550+FireFragment@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
thiserror = "1.0.58"

[build-dependencies]
slint-build = "1.4"
